--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>Introduction to shell coding</title>
+	<title>Introduction to RDP</title>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -34,12 +34,12 @@
 <body class="shower list">
 
 	<header class="caption">
-		<h1>Introduction to shell coding</h1>
+		<h1>Introduction to RDP</h1>
 		<p>Ostapenko Anatoliy</p>
 	</header>
 
 	<section class="slide">
-		<h2 class="shout">Shell coding<br/><small style="font-size:30px;">Check slides at <a href="https://github.com/KOPTE3/http2-slides" target="_blank">https://github.com/KOPTE3/shellcode-slides</a></small></h2>
+		<h2 class="shout">Remote Desktop Protocol<br/><small style="font-size:30px;">Check slides at <a href="https://github.com/KOPTE3/http2-slides" target="_blank">https://github.com/KOPTE3/rdp-slides</a></small></h2>
 	</section>
 
 	<section class="slide">
